--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plainwhite:
   html_lang: "kr" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   navigation:
     - title: Projects
-      url: "/projects"
+      url: "/projects/"
   condensed_mobile:
     #- home
     - page
