--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ plainwhite:
   dark_mode: true # set to true to add dark mode toggle
   portfolio_image: "assets/profile_image.png" # the path from the base directory of the site to the image to display (no / at the start)
   html_lang: "kr" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
-  navigation:
-    - title: Projects
-      url: "/projects/"
+  # navigation:
+  #   - title: Projects
+  #     url: "/projects/"
   condensed_mobile:
     #- home
     - page
