UPDATE : 블로그 테마 변경 (plainwhite => just-the-docs)

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,8 @@ plainwhite:
 
 # Build settings
 # theme: plainwhite
-remote_theme: samarsault/plainwhite-jekyll
+# remote_theme: samarsault/plainwhite-jekyll
+theme: just-the-docs
 
 plugins:
   - jekyll-seo-tag
