UPDATE : 미리보기 삭제 및 sass 설정 원복

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: ghkdusghd
 email: yeonguo95@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   👩🏻‍💻 공부하는 학생 개발자
-show_excerpts: true # set to true to show excerpts on the homepage
+show_excerpts: false # set to true to show excerpts on the homepage
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 sass:
