--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 # External navigation links
 nav_external_links:
   - title: 🍀🫧 NCBT 서비스 바로가기
-    url: https://ncbt-front.vercel.app/
+    url: https://www.ncbt.site
 
 # Show navigation error report
 nav_error_report: true # default is false/nil.
